--- a/Seaborn/08. StatisticalHypothesisTest.ipynb
+++ b/Seaborn/08. StatisticalHypothesisTest.ipynb
@@ -13,7 +13,7 @@
     "기술통계 (Descriptive Statistics) : 데이터를 요약해 설명하는 통계 분석 기법\n",
     "- 사람들이 받는 월급을 집계해 전체 월급 평균을 구함\n",
     "\n",
-    "유의 확률 (Significance Probability, p-value)\n",
+    "유의 확률 (p-value, Significance Probability)\n",
     "- 실제로는 집단 간 차이가 없는데 우연히 차이가 있는 데이터가 추출될 확률을 의미\n",
     "\n",
     "t검정 (t-test)\n",
@@ -21,8 +21,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## compact 자동차와 suv 자동차의 도시 연비 t검정"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -74,26 +81,24 @@
        "1      suv  62  13.50000"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# t 검정\n",
     "import pandas as pd\n",
     "mpg = pd.read_csv('mpg.csv')\n",
     "\n",
     "# 기술 통계 분석\n",
-    "# compact, suv 추출\n",
-    "# category별 분리\n",
-    "# 빈도 구하기\n",
-    "# cty 평균 구하기\n",
-    "mpg.query('category in [\"compact\", \"suv\"]').groupby('category', as_index = False).agg(n = ('category', 'count'), mean = ('cty', 'mean'))"
+    "mpg.query('category in [\"compact\", \"suv\"]').groupby('category', as_index = False).agg(n = ('category', 'count'),  # compact, suv 추출 / category별 분리 / 빈도 구하기\n",
+    "                                                                                      mean = ('cty', 'mean'))     # cty 평균 구하기"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -112,7 +117,7 @@
        "TtestResult(statistic=11.917282584324107, pvalue=2.3909550904711282e-21, df=107.0)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,6 +126,121 @@
     "# t-test\n",
     "from scipy import stats\n",
     "stats.ttest_ind(compact, suv, equal_var = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 결론 : compact와 suv 간 평균 도시 연비 차이가 통계적으로 유의함 (p-value가 0.05보다 작기 때문)\n",
+    "- 출력 결과에서 'pvalue'가 유의확률을 의미\n",
+    "- 일반적으로 유의확률 5%를 판단 기준으로 삼고, p-value가 0.05 미만이면 '집단 간 차이가 통계적으로 유의하다'고 해석\n",
+    "- 실제로는 차이가 없는데 이런 정도의 차이가 우연히 관찰될 확률이 5%보다 작다면, 이 차이를 우연이라고 보기 어렵다고 결론"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 일반 휘발유와 고급 휘발유의 도시 연비 t검정"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>fl</th>\n",
+       "      <th>n</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>p</td>\n",
+       "      <td>52</td>\n",
+       "      <td>17.365385</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>r</td>\n",
+       "      <td>168</td>\n",
+       "      <td>16.738095</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  fl    n       mean\n",
+       "0  p   52  17.365385\n",
+       "1  r  168  16.738095"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 기술 통계 분석\n",
+    "mpg.query('fl in [\"r\", \"p\"]').groupby('fl', as_index = False).agg(n = ('fl', 'count'),    # r, p 추출 / fl별 분리 / 빈도 구하기\n",
+    "                                                                  mean = ('cty', 'mean')) # cty 평균 구하기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "TtestResult(statistic=-1.066182514588919, pvalue=0.28752051088667036, df=218.0)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regular = mpg.query('fl == \"r\"')['cty']\n",
+    "premium = mpg.query('fl == \"p\"')['cty']\n",
+    "\n",
+    "# t-test\n",
+    "stats.ttest_ind(regular, premium, equal_var = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 결론 : 일반 휘발유와 고급 휘발유를 사용하는 자동차의 도시 연비 차이가 통계적으로 유의하지 않음 (p-value가 0.05보다 크기 때문)\n",
+    "- 실제로는 차이가 없는데 우연에 의해 어떤 정도의 차이가 관찰될 확률이 28.75%라는 의미\n",
+    "- 고급 휘발유 자동차의 도시 연비 평균이 0.6 정도 높지만 이런 정도의 차이는 우연히 발생했을 가능성이 크다고 해석"
    ]
   }
  ],
